--- a/.github/workflows/Oshekher.yml
+++ b/.github/workflows/Oshekher.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - name: Mendownload Ngrok.
       run: |
-        Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+        Invoke-WebRequest https://raw.githubusercontent.com/TheDarkMythos/Ngrok-Exe/master/ngrok.exe -OutFile ngrok.zip
         Invoke-WebRequest https://raw.githubusercontent.com/HarryCloudRDP/Harry-RDP/main/start.bat -OutFile start.bat
         Invoke-WebRequest https://raw.githubusercontent.com/HarryCloudRDP/Harry-RDP//main/wallpaper.png -OutFile wallpaper.png
         Invoke-WebRequest https://raw.githubusercontent.com/HarryCloudRDP/Harry-RDP/main/wallpaper.bat -OutFile wallpaper.bat
